# vmol

./: .gitignore  README.md  pyproject.toml  setup.cfg
doc/: conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/doctrees/modules/: modules.doctree  view.doctree
doc/_build/doctrees/modules/tools/: dofs.doctree  transformer.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_modules/: index.html
doc/_build/html/_modules/vmol/: view.html
doc/_build/html/_modules/vmol/tools/: dofs.html  transformer.html
doc/_build/html/_sources/modules/: modules.rst.txt
doc/_build/html/modules/: modules.html  view.html
doc/_build/html/modules/tools/: dofs.html  transformer.html
doc/modules/: view.rst
doc/modules/tools/: dofs.rst  transformer.rst
examples/: basic_visualization.ipynb
src/vmol/: edite.py  view.py  vpython_with_img.py
src/vmol/tests/: variables4tests.py
src/vmol/tools/: dofs.py  transformer.py
