[metadata]
name = vmol
version = 0.1.0
license = MIT
description = Molecule Visualization Package that uses VPython
long_description = file: README.md
author = Hits_mbm
author_email = daniel.sucerquia@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License (GPL)
        Operating System :: OS Independent

[options]
packages = 
    vmol
package_dir =
    =src
include_package_data = True
install_requires =
    ase
    vpython

python_requires = >= 3.9

[options.packages.find]
where=src
